tests/ui/borrowck/alias-liveness/gat-hide-lifetime-in-type-arg-for-swap.edition2015.stderr
error[E0515]: cannot return value referencing local variable `x`
  --> $DIR/gat-hide-lifetime-in-type-arg-for-swap.rs:35:5
   |
LL |     h.hide(&mut res).swap(h.hide(&mut &x));
   |                                       -- `x` is borrowed here
LL |     res
   |     ^^^ returns a value referencing data owned by the current function

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0515`.
